--- a/package.json
+++ b/package.json
@@ -12,11 +12,20 @@
     "alertifyjs": "^1.13.1",
     "axios": "^0.21.1",
     "formik": "^2.2.9",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "primeicons": "^4.1.0",
+    "primereact": "^6.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
+    "react-transition-group": "^4.4.2",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.1.2",
